[package]
name = "halo2_bn254_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# Halo2 ecosystem crates (no_std-compatible)
halo2_proofs = { version = "0.3", default-features = false }
ff           = { version = "0.13", default-features = false }
group        = { version = "0.13", default-features = false, features = ["alloc"] }
pairing      = { version = "0.23", default-features = false }
rand_core    = { version = "0.6", default-features = false }

[features]
# default enables nothing special; no_std safe
default = []

